Interactive Cards Updated

--- a/interactive-cards/index.html
+++ b/interactive-cards/index.html
@@ -16,20 +16,15 @@
 			<div class="col-md-6">
 				<div id="interactive-card-1" class="interactive-card">
 					<div class="phone-mockup">
-						<div class="phone-screen">
+						<div class="phone-screen" data-bg="img/app-screen-1.png">
 							<div class="phone-screen-overlay"></div>
 						</div>
 					</div>
 					<div class="content">
-						<div class="image">
-							<span class="close close-me"><i class="fa fa-times"></i></span>
-						</div>
-						<div class="text center-text">
-							<div class="text-inner">
-								<h2 class="title">Jane Anderson</h2>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi sint quis officiis, aspernatur atque harum in.</p>
-								<a href="#" class="interactive-btn">Read More</a>
-							</div>
+						<span class="close close-me"><i class="fa fa-times"></i></span>
+						<div class="content-overflow">
+							<img class="align-center" src="img/cover-image.png" alt="">
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis necessitatibus tempore dolor, aliquam temporibus inventore adipisci. Ipsum, in dolorum? Tenetur nisi ratione sed voluptate officia. Ullam labore dolorum corporis fuga enim sit quis excepturi incidunt necessitatibus corrupti fugiat accusamus quaerat repudiandae voluptatem totam quam ea tempore perferendis, perspiciatis itaque nemo accusantium nesciunt facilis! Nobis vitae perspiciatis eum laborum, eaque dignissimos sit porro maiores id doloremque dolore excepturi repellendus sint ipsam nulla possimus amet fugit sunt quidem nesciunt. In hic, eaque accusamus! Nemo hic, quas omnis fuga rem, nihil voluptates itaque voluptatem obcaecati sint, aspernatur, corrupti! Animi voluptatibus asperiores, iusto voluptas quisquam at earum, culpa voluptatem, excepturi architecto dignissimos optio deserunt neque est fugiat? Doloribus nisi voluptas laboriosam dicta rem obcaecati quis soluta magni ipsum odio impedit, eligendi dolor inventore ratione, possimus numquam ullam facere. Quo est quae, laudantium, sed nobis assumenda quaerat voluptate architecto quisquam doloremque, soluta inventore libero delectus ullam? Blanditiis optio assumenda quas vero ipsa nulla minus voluptatum voluptates soluta, nemo facilis veritatis debitis asperiores? Fuga dolor est perspiciatis. Deleniti voluptatem nam nobis ipsa numquam assumenda porro illum nemo natus aperiam, officia fugiat eum atque beatae eius soluta tempore aliquid dolores ab molestias non nisi pariatur voluptas iusto error. Pariatur odio fuga voluptatibus impedit commodi dicta quas aliquid reiciendis. Minus recusandae nisi ipsa laborum. Quo odit dolores, odio numquam eveniet repellat nobis reprehenderit, optio possimus ex similique hic error totam! Adipisci ut odio dignissimos facilis et, iusto illum possimus non vero, suscipit, mollitia! Eos alias minima omnis voluptates expedita sint tenetur sunt consectetur nihil, in repudiandae maiores explicabo molestiae doloremque, autem! Quas aliquam saepe amet repellendus cupiditate sapiente possimus necessitatibus. Corporis nostrum libero accusamus aliquam architecto praesentium quidem in id eum, tempore. Illum, nemo debitis eius voluptate accusantium non nesciunt possimus corrupti ducimus iusto, temporibus corporis ipsum voluptates, odit, harum doloremque architecto soluta cumque sit. Molestiae dicta unde cumque, ullam provident recusandae inventore perspiciatis vel reprehenderit aspernatur, vero sunt eligendi aut possimus ipsa fuga. Cupiditate eius consequuntur, ratione provident delectus rerum ipsam, fugit alias iure, optio blanditiis, molestias saepe ipsa similique aliquam nam repellat quasi dicta eligendi deleniti veniam impedit quae assumenda totam. Maiores recusandae mollitia magnam ipsa suscipit reiciendis, quasi ipsam sunt odit iste consectetur, blanditiis iusto voluptas animi. Dolor autem soluta nam quam ipsa, magnam, impedit possimus consectetur asperiores ducimus commodi ipsam, maxime amet voluptatum eius dolore, praesentium distinctio tenetur reprehenderit et nulla maiores! Vero voluptas voluptate, nemo, distinctio reprehenderit, hic obcaecati nam, nisi mollitia optio fugit assumenda repudiandae. Nulla rem repudiandae adipisci fugit nemo vitae voluptatum quibusdam laboriosam omnis eos. Error accusamus, minus vel alias possimus officiis at quisquam dolores dolore hic sequi natus ducimus itaque labore deleniti! Vitae suscipit quidem temporibus maiores, exercitationem aperiam eaque iure ipsam omnis nam animi dolor doloremque fugiat dolores labore tenetur dolorem laborum, asperiores laboriosam atque, perspiciatis nisi quos, incidunt assumenda. Ut eligendi temporibus soluta vitae placeat voluptates repellendus necessitatibus provident corporis aliquam inventore impedit veniam quisquam assumenda fuga fugit eum aperiam quod molestias magnam, itaque, iste eveniet libero ipsa. Tempora, voluptates atque sint consequuntur rerum animi similique accusantium voluptate dicta velit, accusamus maiores amet. Voluptas rerum non tenetur id modi quos sapiente omnis minus odio earum consectetur pariatur, ex consequatur accusantium quaerat voluptate nemo sunt aspernatur officiis, tempora qui, quidem vero. Numquam voluptates aliquid deleniti cumque architecto nam, nobis ex nostrum, iste officiis, molestiae, voluptatum at eum optio animi! Distinctio hic autem molestias cupiditate eaque odit suscipit repudiandae sapiente nobis ipsam inventore ut veritatis in optio soluta officiis animi, reprehenderit, modi neque provident numquam delectus asperiores! Quos quis nam beatae, placeat explicabo iste esse temporibus. Reprehenderit, iusto, debitis!</p>
 						</div>
 					</div>
 				</div>
@@ -37,21 +32,89 @@
 			<div class="col-md-6">
 				<div id="interactive-card-2" class="interactive-card">
 					<div class="phone-mockup">
-						<div class="phone-screen">
+						<div class="phone-screen" data-bg="img/app-screen.jpg">
 							<div class="phone-screen-overlay"></div>
 						</div>
 					</div>
 					<div class="content">
-						<div class="image">
-							<span class="close close-me"><i class="fa fa-times"></i></span>
-						</div>
-						<div class="text center-text">
+						<div class="text">
 							<div class="text-inner">
 								<h2 class="title">Jane Anderson</h2>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi sint quis officiis, aspernatur atque harum in.</p>
+								<p>A new concept of showing content in your web page with more interactive way.</p>
 								<a href="#" class="interactive-btn">Read More</a>
 							</div>
 						</div>
+						<div class="image">
+							<span class="close close-me"><i class="fa fa-times"></i></span>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<!-- Carousel -->
+			<div class="col-md-6">
+				<div id="interactive-card-3" class="interactive-card">
+					<div class="phone-mockup">
+						<div class="phone-screen" data-bg="img/app-screen-2.png">
+							<div class="phone-screen-overlay"></div>
+						</div>
+					</div>
+					<div class="content">
+						<span class="close close-me"><i class="fa fa-times"></i></span>
+						<div class="carousel-container">
+							<ul id="carousel" class="carousel">
+								<li><img src="img/1.png" alt="Slide"></li>
+								<li><img src="img/2.png" alt="Slide"></li>
+								<li><img src="img/3.png" alt="Slide"></li>
+								<li><img src="img/4.png" alt="Slide"></li>
+							</ul>
+						</div>
+						<div class="navigation">
+							<a href="#" class="nav" data-nav="prev">Prev</a>
+							<a href="#" class="nav" data-nav="next">Next</a>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- Carousel -->
+			<div class="col-md-6">
+				<div id="interactive-card-4" class="interactive-card">
+					<div class="phone-mockup">
+						<div class="phone-screen" data-bg="img/app-screen-3.png">
+							<div class="phone-screen-overlay"></div>
+						</div>
+					</div>
+					<div class="content">
+						<span class="close close-me"><i class="fa fa-times"></i></span>
+						<div class="carousel-container">
+							<ul id="carousel" class="carousel">
+								<li><img src="img/1.png" alt="Slide"></li>
+								<li><img src="img/2.png" alt="Slide"></li>
+								<li><img src="img/3.png" alt="Slide"></li>
+								<li><img src="img/4.png" alt="Slide"></li>
+							</ul>
+						</div>
+						<div class="navigation">
+							<a href="#" class="nav" data-nav="prev">Prev</a>
+							<a href="#" class="nav" data-nav="next">Next</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<!-- Video -->
+			<div class="col-md-12">
+				<div id="interactive-card-5" class="interactive-card">
+					<div class="phone-mockup">
+						<div class="phone-screen" data-bg="img/app-screen-1.png">
+							<div class="phone-screen-overlay"></div>
+						</div>
+					</div>
+					<div class="content">
+						<span class="close close-me"><i class="fa fa-times"></i></span>
+						<iframe src="https://www.youtube.com/embed/ZeO13s5eY-s?start=60" allowfullscreen></iframe>
 					</div>
 				</div>
 			</div>
@@ -65,7 +128,7 @@
 	<script>
 		jQuery(document).ready(function($) {
 			var options = {
-				containerClass: 'interactive-card-1',
+				containerId: 'interactive-card-1',
 				screenAnimation: {
 					start: 'fade-out',
 					end: 'fade-in'
@@ -74,14 +137,14 @@
 					start: 'zoom-out',
 					end: 'zoom-in'
 				},
-				contentAnimation: 'slide-in-left',
+				contentAnimation: 'content-show',
 				shadow: true,
 				revealTime: 400
 			}
 			interactiveCards( options );
 
 			var options2 = {
-				containerClass: 'interactive-card-2',
+				containerId: 'interactive-card-2',
 				screenAnimation: {
 					start: 'fade-out',
 					end: 'fade-in'
@@ -95,6 +158,54 @@
 				revealTime: 400
 			}
 			interactiveCards( options2 );
+
+			var options3 = {
+				containerId: 'interactive-card-3',
+				screenAnimation: {
+					start: 'fade-out',
+					end: 'fade-in'
+				},
+				mockupAnimation: {
+					start: 'zoom-out',
+					end: 'zoom-in'
+				},
+				contentAnimation: 'content-show',
+				shadow: true,
+				revealTime: 400
+			}
+			interactiveCards( options3 );
+
+			var options4 = {
+				containerId: 'interactive-card-4',
+				screenAnimation: {
+					start: 'fade-out',
+					end: 'fade-in'
+				},
+				mockupAnimation: {
+					start: 'zoom-out',
+					end: 'zoom-in'
+				},
+				contentAnimation: 'content-show',
+				shadow: true,
+				revealTime: 400
+			}
+			interactiveCards( options4 );
+
+			var options5 = {
+				containerId: 'interactive-card-5',
+				screenAnimation: {
+					start: 'fade-out',
+					end: 'fade-in'
+				},
+				mockupAnimation: {
+					start: 'zoom-out',
+					end: 'zoom-in'
+				},
+				contentAnimation: 'content-show',
+				shadow: true,
+				revealTime: 400
+			}
+			interactiveCards( options5 );
 		});
 	</script>
 </body>
